<resources>
    <string name="app_name">FunBox</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="store_front">Store-Front</string>
    <string name="back_end">Back-End</string>
    <string name="price">Цена</string>
    <string name="buy">Купить</string>
    <string name="count">Количество</string>
    <string name="add">Add</string>
    <string name="open_item">open item</string>
    <string name="close">Отменить</string>
    <string name="save">Сохранить</string>
    <string name="title">Название</string>
</resources>